# renku-frontend-buildpacks

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  go.mod  go.sum
.devcontainer/: devcontainer.json
.devcontainer/pack-cli/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: build.yaml  makefile.yml  test.yaml  update-versions.yml
actions/build-image/: README.md  action.yml
builders/cuda-selector/: builder.toml
builders/selector/: builder.toml
buildpacks/coding-agent/: buildpack.toml
buildpacks/conda-nodefaults/: buildpack.toml
buildpacks/custom-frontend/: buildpack.toml
buildpacks/dependency-manager/: buildpack.toml
buildpacks/frontend-selector/: buildpack.toml
buildpacks/frontends/: buildpack.toml  package.toml
buildpacks/homebrew/: buildpack.toml
buildpacks/init-scripts/: buildpack.toml
buildpacks/jupyterlab/: buildpack.toml  requirements.txt
buildpacks/kernel-installer/: buildpack.toml
buildpacks/micromamba/: buildpack.toml
buildpacks/nix-packages/: buildpack.toml
buildpacks/none-frontend/: buildpack.toml
buildpacks/pi-agent/: buildpack.toml
buildpacks/piagent/: buildpack.toml
buildpacks/python-dependency-manager/: buildpack.toml  package.toml
buildpacks/r/: buildpack.toml
buildpacks/r-conda/: buildpack.toml
run-image/: .bashrc  Dockefile  Dockerfile
samples/poetry/: pyproject.toml
scripts/: buildpack_api.go  install_shellcheck.sh  main.go  publish_builder.sh  publish_buildpack.sh  publish_run_image.sh  update_builder_versions.sh  update_buildpack_versions.sh
(+44 files in other folders)
